objects/Budget__c.object
<CustomObject>
    <description>This is an object capturing the budgets related to users and departments</description>
    <fields>
        <fullName>Adjusted_Budget_Balance__c</fullName>
        <description>Reflective of the current max budget and is reflective of any budget increases</description>
        <inlineHelpText>If the starting balance is altered this field will indicate the new adjusted balance.</inlineHelpText>
        <label>Adjusted Budget Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Balance__c</fullName>
        <description>What is the current balance at the given time.</description>
        <inlineHelpText>This is the budget balance for this moment.</inlineHelpText>
        <label>Current  Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Limitless_Budget__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This budget doesn&apos;t have a limit to what can be allocated to it</description>
        <label>Limitless Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Starting_Balance__c</fullName>
        <description>The Starting balance of the budget</description>
        <inlineHelpText>This was the starting balance of the budget</inlineHelpText>
        <label>Starting Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Budget</label>
    <listViews>
        <fullName>All_Budgets</fullName>
        <columns>NAME</columns>
        <columns>Limitless_Budget__c</columns>
        <columns>Starting_Balance__c</columns>
        <columns>Current_Balance__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Budgets</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Budget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>